<resources>
    <string name="app_name">EatMeatProject</string>
    <string name="TitleLoginOrRegister1">Book any meal from any restaurant \n within the app</string>
    <string name="TitleLoginOrRegister2">Connect the application to anywhere</string>
    <string name="ConLoginOrRegister1">Lorem Ipsum has been the industry standard \n dummy text ever since the 1500s</string>
    <string name="ConLoginOrRegister2">Lorem Ipsum has been the industry standard \n dummy text ever since the 1500s</string>
    <string name="TitleLoginOrRegister3">Register or login here</string>
    <string name="ConLoginOrRegister3">Lorem Ipsum has been the industry standard \n dummy text ever since the 1500s</string>
    <string name="Login">Login</string>
    <string name="Sing_UP">Sing UP</string>
    <string name="ButChoeseCreateAcont">Create an Account</string>
    <string name="ChoseCreateAcont">Order your favorite food from your \n favorite restaurant</string>
    <string name="Full_Name">Full Name</string>
    <string name="User_Name">Username</string>
    <string name="Email">E-mail</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Password">Password</string>
    <string name="Confirm_password">Confirm password</string>
    <string name="Create_New_Account">Create New Account</string>
    <string name="checkBoxRigister">Yes, I want to receive promotional emails</string>
    <string name="haveAccont">Already have an account?</string>
    <string name="singin">Sing in</string>
    <string name="forgetaccont">Forgot your password?</string>
    <string name="resetpass">Reset Your Password</string>
    <string name="send">Send</string>
    <string name="Enter_new_password">Enter your new password below.</string>
    <string name="new_password">New Password</string>
    <string name="conferm_new_password">Confirm New Password</string>
    <string name="butResetPass">Reset Password</string>
    <string name="search">Search</string>
    <string name="Home">Home</string>
    <string name="Main">Main</string>
    <string name="Requests">Requests</string>
    <string name="Restaurants">Restaurants</string>
    <string name="About_us">About us</string>
    <string name="Call_us">Call us</string>
    <string name="settings">Setting</string>
    <string name="sign_out">Sign Out</string>
    <string name="profile">profile</string>
    <string name="personprofilename">Mohamed Albaz</string>
    <string name="Info">Info</string>
    <string name="Edit">Edit</string>
    <string name="Name">Name</string>
    <string name="Family_Name">Family Name</string>
    <string name="Birthday">Birthday</string>
    <string name="Notifications">Notifications</string>
    <string name="Favorite">Favorite</string>
    <string name="Phone_Number">Phone Number</string>
    <string name="Main_Dishes">Main Dishes</string>
    <string name="Entrees">Entrees</string>
    <string name="Sandwiches">Sandwiches</string>
    <string name="Candy">Candy</string>
    <string name="Meals">Meals</string>
    <string name="About_us_text">Hot Meal \n It is an application that provides services  for restaurants where it provides food,  drink and delivery services etc.</string>
    <string name="date_created">Date created</string>
    <string name="Mobile_Number">Mobile Number</string>
    <string name="data_call_us">:   %1$s</string>
    <string name="Social_Networks">Social Networks</string>
    <string name="Email2">Email</string>
    <string name="Add_address">Add Address</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="first_address">First Address</string>
    <string name="second_address">Second Address</string>
    <string name="City">City</string>
    <string name="Neighborhood">Neighborhood</string>
    <string name="Add">add</string>
    <string name="ending">Ending</string>
    <string name="Delivery_Address">Delivery Address</string>
    <string name="DonthaveAcont">Dont have an account?</string>
    <string name="New_notice">New notice</string>
    <string name="body_notification">Notification</string>
    <string name="thailandi_resturant">THAILANDI</string>
    <string name="Important_Dishes">Important Dishes</string>
    <string name="See_All">See All</string>
    <string name="meal_time">Meal time</string>
    <string name="_20_min">20 min</string>
    <string name="grills">Grills</string>
    <string name="Important_Restaurants">Important Restaurants</string>
    <string name="Palmera">Palmera</string>
    <string name="rating">Rating</string>
    <string name="google_maps_key">AIzaSyB2OzADUq6nVDK4JmBeQg8Xgm6Vkxx6Bfs</string>
    <string name="Restaurants_in_the_range">Restaurants in the range</string>
    <string name="personEmail">m-albaz@hotmail.com</string>
    <string name="address">address</string>
    <string name="Location">Location</string>
    <string name="facebook_application_id">2672125522864305</string>
    <string name="fb_login_protocol_scheme">fb2672125522864305</string>
    <string name="Burger_Meal">Burger Meal</string>
    <string name="Details">Details</string>
    <string name="as_visitor">Or login as a visitor</string>
    <string name="price_for_burger">price for burger</string>
    <string name="palmera">Palmera</string>
    <string name="dera">Al-Dera</string>
    <string name="taboon">Taboon</string>


</resources>
